--- a/.github/workflows/socket-security.yml
+++ b/.github/workflows/socket-security.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           
           npm install -g socket
-          console.log(${{ secrets.SOCKET_API }});
+          console.log(${{ secrets.SOCKET_API }})
           curl https://api.socket.dev/v0/quota -X GET -u "${{ secrets.SOCKET_API }}:"
           
           socket ci '**/package.json' --json >> dependency-report.json
